# forge

./: .gitignore  AGENTS.md  CLAUDE.md  CLI_PROVIDER_UPDATE_NOTES.md  FORGE_HARNESS_SURFACE_UPDATE_NOTES.md  LICENSE  ORCH_PLAN.md  PLAN.md  README.md  TODOS.md  pyproject.toml  roadmap.md  seam_parity_report.json  tasks.json
.codex-subagents/: e2e.jsonl  e2e_prompt.txt  projection.jsonl  projection_prompt.txt  upstream.jsonl  upstream_prompt.txt
.codex/handoffs/: 2026-04-26-150345-seam-parity-behavioral-fix.md
.forge-harness-runs/20260405T151634Z-recommend_automation_improvements-2d9d2ddd/: BEST_DRAFT.md  REPORT.md  git.final.json  strategy.effective.json  summary.json  workspace.policy.config.json
.forge-harness-runs/20260414T010327Z-recommend_automation_improvements-74f2c456/: BEST_DRAFT.json  BEST_DRAFT.md  REPORT.md  git.final.json  git.initial.json  summary.json  task.effective.json  workspace.policy.final.json
.forge-harness-runs/20260414T014134Z-recommend_automation_improvements-a4baf869/: FINAL_ANSWER.json  FINAL_ANSWER.md  REPORT.md  analysis_review.contract.effective.json  git.initial.json  issue_ledger.final.json  summary.json  workspace.policy.final.json
.system/charter/: CHARTER.md
.system/environment_inventory/: ENVIRONMENT_INVENTORY.md
anvil/: cli.py  cli_utils.py  config_loader.py  config_validator.py  configuration_resolver.py  langgraph_compat.py  leadership_adjustments.py  leadership_analysis.py  leadership_interface.py  leadership_prompts.py  orchestrator.py  performance_monitor.py  persistence_manager.py  provider_factory.py  text_sanitize.py  usage.py  utils.py
anvil/cli_agents/: __init__.py  base.py  claude_code.py  codex.py
anvil/harness/: __init__.py  analysis_review_runtime.py  artifacts.py  bounded_stage_runtime.py  builder.py  cli.py  contracts.py  (+26 more)
config/: models.yaml
docs/: analysis_review_contract.md  c3_extraction_inventory_design.md  c3_public_graph_support_levels.md  contributing.md  planning_runtime_process.md  roadmap.md  strategy_dsl_public_subset_contract.md
examples/: 00_offline_smoke.py  01_run_openai.py  02_role_overrides.py  03_run_codex_cli.py  04_run_mixed_cli.py  README.md
scripts/: README.md  check_seam_parity.py  deps_audit.py  forge_test.py  generate_topic_closure_replays.py  run_focus_gate_acceptance.py  run_focus_gate_refinement_driver.py  run_m2_focus_gate_live_acceptance.py  setup_tools.py  test_persistence.py  test_setup.py
tests/: conftest.py  test_bounded_stage_runtime.py  test_check_seam_parity.py  test_cli_list.py  test_cli_providers.py  test_cli_stream_filter.py  test_cli_test_provider.py  test_cli_utils.py  test_cli_validation.py  test_config_validator_cli.py  test_docs_surface.py  test_generate_topic_closure_replays.py  test_graph_factory_compat.py  test_harness_analysis_contract.py  test_harness_analysis_review_graph.py  test_harness_cli_command.py  test_harness_example_strategy_wiring.py  test_harness_executor.py  test_harness_git_utils.py  test_harness_planning_artifacts.py  test_harness_planning_eval.py  test_harness_planning_graph.py  test_harness_prompt_consistency.py  test_harness_provider_adapter.py  test_harness_public_subset_contract.py  test_harness_public_subset_enforcement.py  test_harness_reporting.py  test_harness_runner.py  test_harness_selection.py  test_harness_semantic_validation.py  test_harness_standalone_cli.py  test_harness_state_boundaries.py  test_harness_strategy_graph.py  test_langgraph_parity.py  test_lg_offline_smoke.py  test_run_focus_gate_acceptance.py  test_run_m2_focus_gate_live_acceptance.py  test_single_pass_runtime.py  test_text_sanitize.py  test_usage.py  (+1 more)
(+165 files in other folders)
